DBC22-4790: Fix for sidepanel overflow on Cameras page

--- a/src/frontend/src/pages/EventsListPage.scss
+++ b/src/frontend/src/pages/EventsListPage.scss
@@ -45,8 +45,8 @@
       position: initial;
 
       @media (min-width: 1200px) {
-        width: 360px;
-        min-width: 360px;
+        width: 310px;
+        min-width: 310px;
         position: sticky;
       }
     }
